[metadata]
name = os-disk-config
summary = OpenStack disk configuration
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/rthallisey/os-disk-config
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    os_disk_config

[global]
setup-hooks =
        pbr.hooks.setup_hook

[entry_points]
console_scripts =
        os-disk-config = os_disk_config.cli:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = os_disk_config/locale
domain = os-disk-config

[update_catalog]
domain = os-disk-config
output_dir = os_disk_config/locale
input_file = os_disk_config/locale/os-disk-config.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_disk_config/locale/os-disk-config.pot

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
