[metadata]
name = os-disk-config
summary = OpenStack disk configuration
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/rthallisey/os-disk-config
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    os_disk_config

[entry_points]
console_scripts =
        os-disk-config = os_disk_config.cli:main
